[package]
name = "mport"
version = "0.0.1"
authors = ["danielvisser <danielvisser10@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
cgmath = "0.17.0"
ash = "0.31.0"
ash-window = "0.4"
image = "0.23.12"